2010-03-29  Tiger Soldier  <tigersoldi@gmail.com>

	* src/ol_config_property.h: Make MiniLyrics the default lyric download engine.

	* src/tests/Makefile.am: CHANGE: Use an universal LDADD for all tests.

	* src/ol_lrc.c (ol_lrc_new): FIX: issue 70, add an extra empty lyric at the end to avoid lack of lyric text.

	* src/ol_main.c: CHANGE: Check whether music has been changed every second. This should fix issue 69.

	* src/ol_lrc_fetch_minilyrics.c (ol_lrc_fetch_minilyrics_download): FIX: Detect encoding of downloaded lyrics.
	FIX: Decode XML special characters in search results

	* src/ol_lrc.c (_init_lrc): FIX: Initialize offset of LRC Parser.

	* src/ol_lrc_fetch_minilyrics.c: ADD: Support download from MiniLyrics

2010-03-28  Tiger Soldier  <tigersoldi@gmail.com>

	* src/ol_lrc_fetch_qianqian.c (ol_lrc_fetch_qianqian_search): FIX: remove temp files after searching and downloading

	* src/ol_md5.c: ADD: MD5 Library from nettle library

2010-03-25  Tiger Soldier  <tigersoldi@gmail.com>

	* configure.ac: New release version

2010-03-24  Tiger Soldier  <tigersoldi@gmail.com>

	* data/dialogs.glade: FIX: The handler of advance/delay lrc offset in pop menu is fixed

	* src/ol_lrc.c: ADD: Rewirte of LRC file module

	* src/ol_lrc_parser.c: ADD: Charset detection and convertion of LRC Parser

	* src/tests/ol_lrc_parser_test.c: ADD: Basic test for LRC Parser

	* src/ol_lrc_parser.c: ADD: A new lexical parser of LRC files

2010-03-23  Tiger Soldier  <tigersoldi@gmail.com>

	* ADD: Charset detector library from pcmanx

2010-03-22  Tiger Soldier  <tigersoldi@gmail.com>

	* src/ol_osd_module.c: FIX: The bug that OSD Window never hides when is set to hidden is fixed

	* src/ol_utils.c (ol_path_is_file): CHANGE: Comment out the annoying ol_path_is_file log

	* src/ol_trayicon.c (activate): ADD: Show/Hide Lyrics when click the tray icon

2010-03-16  Tiger Soldier  <tigersoldi@gmail.com>

	* ADD: Display player icons in notification and tray icon